--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
             </div>
         </div>
     </aside>
-    <section class="main"></section>
+    <section class="main">
+       <div class="main__left">
+        <header class="header">
+            <div class="header__inner">        
+                    <h2 class="header__title">Hello Josh!</h2>
+                    <div class="header__subtitle">It’s good to see you again.</div>
+                </div>
+            
+        </header>
+        </div>
+    </section>
 </body>
 
 </html>
