--- a/index.html
+++ b/index.html
@@ -63,15 +63,42 @@
         </div>
     </aside>
     <section class="main">
-       <div class="main__left">
-        <header class="header">
-            <div class="header__inner">        
+        <div class="main__left">
+            <header class="header">
+                <div class="header__inner">
                     <h2 class="header__title">Hello Josh!</h2>
                     <div class="header__subtitle">It’s good to see you again.</div>
                 </div>
-            
-        </header>
+
+            </header>
+            <section class="course">
+                <div class="course__info">
+                    <div class="course__inner">
+                        <div class="course__img">
+                            <img src="src/img/spain.png" alt="spain">
+                        </div>
+                        <div class="course__name">
+                            <div class="course__title">
+                                Spanish B2
+                            </div>
+                            <div class="course__subtitle">
+                                by Alejandro Velazquez
+                            </div>
+                        </div>
+                        <div class="course__progress">
+                            83%
+                        </div>
+                        <button class="course__btn">
+                            Continue
+                        </button>
+                    </div>
+                </div>
+                <div class="course__arrows"></div>
+            </section>
         </div>
+
+
+
     </section>
 </body>
 
