--- a/index.html
+++ b/index.html
@@ -93,7 +93,121 @@
                         </button>
                     </div>
                 </div>
-                <div class="course__arrows"></div>
+                <div class="course__arrows">
+                    <a href="#" class="course__arrows--left">
+                        <span class="material-icons">
+                            arrow_circle_up
+                        </span>
+                    </a>
+                    <a href="#" class="course__arrows--right">
+                        <span class="material-icons">
+                            arrow_circle_up
+                        </span>
+                    </a>
+                </div>
+            </section>
+            <section class="courses-list">
+                <h2 class="courses-list__title">
+                    Courses
+                </h2>
+                <nav class="courses-list__nav list-nav">
+                    <ul>
+                        <li class="list-nav__item--active">All Courses</li>
+                        <li class="list-nav__item">The Newest</li>
+                        <li class="list-nav__item">Top Rated</li>
+                        <li class="list-nav__item">Most Popular</li>
+                    </ul>
+                </nav>
+                <div class="courses-list__items-container">
+                    <div class="item-container__item item">
+                        <div class="item__img">
+                            <img src="src/img/figma.png" alt="figma">
+                        </div>
+                        <div class="item__name">
+                            <div class="item__title">Learn Figma</div>
+                            <div class="item__subtitle">by Christopher Morgan</div>
+                        </div>
+                        <div class="item__lenght">
+                            <span class="material-icons">
+                                watch_later
+                            </span>
+                            <p>6h 30min</p>
+                        </div>
+                        <div class="item__rating">
+                            <span class="material-icons">
+                                whatshot
+                            </span>
+                            <p>4,9</p>
+                        </div>
+                        <button class="item__btn">View course</button>
+                    </div>
+                    <div class="item-container__item item">
+                        <div class="item__img">
+                            <img src="src/img/analog.png" alt="analog">
+                        </div>
+                        <div class="item__name">
+                            <div class="item__title">Analog photography</div>
+                            <div class="item__subtitle">by Gordon Norman</div>
+                        </div>
+                        <div class="item__lenght">
+                            <span class="material-icons">
+                                watch_later
+                            </span>
+                            <p>3h 15min</p>
+                        </div>
+                        <div class="item__rating">
+                            <span class="material-icons">
+                                whatshot
+                            </span>
+                            <p>4,7</p>
+                        </div>
+                        <button class="item__btn">View course</button>
+                    </div>
+                    <div class="item-container__item item">
+                        <div class="item__img">
+                            <img src="src/img/instagram.png" alt="instagram">
+                        </div>
+                        <div class="item__name">
+                            <div class="item__title">Master Instagram</div>
+                            <div class="item__subtitle">by Sophie Gill</div>
+                        </div>
+                        <div class="item__lenght">
+                            <span class="material-icons">
+                                watch_later
+                            </span>
+                            <p>7h 40min</p>
+                        </div>
+                        <div class="item__rating">
+                            <span class="material-icons">
+                                whatshot
+                            </span>
+                            <p>4,6</p>
+                        </div>
+                        <button class="item__btn">View course</button>
+                    </div>
+                    <div class="item-container__item item">
+                        <div class="item__img">
+                            <img src="src/img/pencil.png" alt="pencil">
+                        </div>
+                        <div class="item__name">
+                            <div class="item__title">Basics of drawing</div>
+                            <div class="item__subtitle">by Jean Tate</div>
+                        </div>
+                        <div class="item__lenght">
+                            <span class="material-icons">
+                                watch_later
+                            </span>
+                            <p>11h 30min</p>
+                        </div>
+                        <div class="item__rating">
+                            <span class="material-icons">
+                                whatshot
+                            </span>
+                            <p>4,8</p>
+                        </div>
+                        <button class="item__btn">View course</button>
+                    </div>
+                </div>
             </section>
         </div>
 
