--- a/index.html
+++ b/index.html
@@ -207,12 +207,85 @@
                         </div>
                         <button class="item__btn">View course</button>
                     </div>
+                    <div class="item-container__item item">
+                        <div class="item__img">
+                            <img src="src/img/figma.png" alt="figma">
+                        </div>
+                        <div class="item__name">
+                            <div class="item__title">Learn Figma</div>
+                            <div class="item__subtitle">by Christopher Morgan</div>
+                        </div>
+                        <div class="item__lenght">
+                            <span class="material-icons">
+                                watch_later
+                            </span>
+                            <p>6h 30min</p>
+                        </div>
+                        <div class="item__rating">
+                            <span class="material-icons">
+                                whatshot
+                            </span>
+                            <p>4,9</p>
+                        </div>
+                        <button class="item__btn">View course</button>
+                    </div>
                 </div>
             </section>
         </div>
-
-
-
+        <div class="main__right">
+            <section class="navigation">
+                <div class="navigation__search">
+                    <span class="material-icons">
+                        search
+                    </span>
+                    <input type="search">
+                </div>
+                <div class="navigation__notification">
+                    <span class="material-icons">
+                        notifications_none
+                    </span>
+                </div>
+                <div class="navigation__avatar">
+                    <img src="src/img/avatar.png" alt="avatar">
+                </div>
+                <a href="#" class="navigation__btn"></a>
+            </section>
+            <section class="stats">
+                <div class="stats__box">
+                    <div class="stats__number">11</div>
+                    <div class="stats__title">
+                        Courses<br>completed
+                    </div>
+                </div>
+                <div class="stats__box">
+                    <div class="stats__number">4</div>
+                    <div class="stats__title">Courses<br>in progress</div>
+                </div>
+            </section>
+            <section class="statistics">
+                <h2 class="statistics__title">Your statistics</h2>
+                <div class="statistics__nav nav">
+                    <div class="nav__switch">
+                        <a href="#" class="nav__item--active">Learning Hours</a>
+                        <a href="#" class="nav__item">My Courses</a>
+                    </div>
+                    <a href="#" class="nav__btn">Weekly</a>
+                </div>
+                <div class="statistics__graph">
+                    <img src="src/img/graph.png" alt="graph">
+                </div>
+            </section>
+            <section class="banner">
+                <div class="banner__info">
+                    <div class="banner__title">Lern even more!</div>
+                    <div class="banner__text">Unlock premium features only<br>for $9.99 per month</div>
+                    <button class="banner__btn">Go Premium</button>
+                </div>
+                <div class="banner__img">
+                    <img src="src/img/banner.png" alt="banner">
+                </div>
+            </section>
+        </div>
     </section>
 </body>
 
